RESOLVED FIXED274326
[JSC] Should fix the spin lock in jitCompileSIMDFunction from WasmSlowPaths.cpp
https://bugs.webkit.org/show_bug.cgi?id=274326
Summary [JSC] Should fix the spin lock in jitCompileSIMDFunction from WasmSlowPaths.cpp
Yijia Huang
Reported 2024-05-17 12:07:28 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-17 13:26:18 PDT
Yijia Huang
Comment 2 2024-05-20 08:37:31 PDT
EWS
Comment 3 2024-05-20 11:18:45 PDT
Committed 279004@main (87181326e4b9): <https://commits.webkit.org/279004@main> Reviewed commits have been landed. Closing PR #28791 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.