[JSC] Should fix the spin lock in jitCompileSIMDFunction from WasmSlowPaths.cpp https://bugs.webkit.org/show_bug.cgi?id=274326 rdar://128291244

Reviewed by Mark Lam.

Use thread yield to improve performance by reducing CPU waste in a spin lock.

* Source/JavaScriptCore/wasm/WasmSlowPaths.cpp:
(JSC::LLInt::jitCompileSIMDFunction):

Canonical link: https://commits.webkit.org/279004@main